--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ font-family: 'Mulish', sans-serif;
 header{
     margin:30px 130px;
 }
+/* nav section style start*/
 .nav_img{
     width: 48px;
 height: 56px;
@@ -56,3 +57,133 @@ font-weight: 400;
 .nav_bar a:hover{
     color: #FF5400;
 }
+/* nav section style finish */
+/* banner section style start */
+.banner{
+position: relative;
+}
+.banner .banner_img{
+    width: 100%;
+    height: 500px;
+    border-radius: 16px;
+    background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%);
+    
+     
+    z-index: 1;
+    position: relative;
+} 
+.banner_title{
+    color: #FFF;
+
+font-family: Mulish;
+font-size: 64px;
+font-style: normal;
+font-weight: 800;
+/* margin-bottom: 40px; */
+top: -40px;
+position: relative;
+}
+.banner_description{
+    color: #FFF;
+
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    position: relative;
+    right: 18%;
+    top: -20px;
+    
+}
+.banner_container{
+    position: relative;
+    bottom: 360px;
+    z-index: 5;
+    right: -10%;
+    padding-left: 100px;
+
+} 
+.banner_container .banner_btn{
+    /* display:inline-flex; */
+/* padding-left: 100px;
+padding-right: 50px; */
+/* align-items: flex-start; */
+/* gap: 100px; */
+border-radius: 8px;
+background: rgba(255, 255, 255, 0.30);
+width: 800px;
+padding: 15px;
+position: relative;
+left: -100px;
+justify-content: space-around;
+margin-top: 20px;
+}
+.banner_btn1{
+    width: 174px;
+height: 52px;
+border-radius: 8px;
+background: #FFF;
+border: 0;
+color: rgba(19, 19, 24, 0.50);
+
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+margin-right: 20px;
+}
+.banner_btn2{
+    width: 174px;
+height: 52px;
+border-radius: 8px;
+background: #FFF;
+border: 0;
+color: rgba(19, 19, 24, 0.50);
+
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+margin-right: 20px;
+}
+.banner_btn3{
+    width: 174px;
+height: 52px;
+border-radius: 8px;
+background: #FFF;
+border: 0;
+color: rgba(19, 19, 24, 0.50);
+
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+margin-right: 20px;
+}
+.banner_btn4{
+    width: 174px;
+height: 52px;
+border-radius: 8px;
+background: #FF5400;
+border: 0;
+color: #FFFFFF;
+
+text-align: center;
+font-family: Mulish;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+cursor: pointer;
+}
+/* banner section finish */
+
+
+ 
+
+
+
