--- a/style.css
+++ b/style.css
@@ -190,8 +190,9 @@ cursor: pointer;
     gap: 50px
 }
 .tour_container{
-    /* border: 2px solid red; */
+max-width: 50%;
 }
+
 .tour_title{
     color: #131318;
 
@@ -244,16 +245,72 @@ border: 0;
 margin-top: 10px;
 }
 .tour_img{
-    width: 500px;
-    height: 580px;
+    width:100%;
+    height: 100%;
     border-radius: 15px;
     /* border: 2px solid red; */
     position: relative;
-    display: inline-flex;
+    display: flex;
+    /* top: 200px; */
 }
+    
 
 
- 
+#primary_titles{
+    color: #131318;
 
+text-align: center;
+font-family: Mulish;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+}
+#primary_descriptions{
+    color: rgba(19, 19, 24, 0.70);
 
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+margin: 20px 300px;
+
+}
+.benifit_title{
+    color: #131318;
+
+text-align: center;
+font-family: Mulish;
+font-size: 24px;
+font-style: normal;
+font-weight: 800;
+}
+.benifit{
+    border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+padding: 30px;
+}
+.benifit1{
+    border-radius: 16px;
+border: 1px solid rgba(41, 206, 246, 0.20);
+background: rgba(41, 206, 246, 0.05);
+padding: 30px;
+
+}
+.benifit_container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    margin: 30px 130px;
+    
+}
+#benifit2{
+    /* grid-column-start: span 2;
+    grid-column-end: span 3;
+    grid-row-start: span 2; */
+    position: relative;
+    left: 250px;
+}
 
