--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ font-style: normal;
 font-weight: 800;
 border: 0;
 margin-top: 10px;
+cursor: pointer;
 }
 .tour_img{
     width:100%;
@@ -312,5 +313,54 @@ padding: 30px;
     grid-row-start: span 2; */
     position: relative;
     left: 250px;
+}
+/* perfect section style */
+.perfect_section{
+    display: flex;
+    margin: 30px 130px;
+    gap: 100px;
+}
+.perfect_container{
+    width: 50%;
+}
+.perfect_vdo{
+    width: 40%;
+    height: 400px;
+    /* border: 2px solid red;
+    position: relative;
+    display: inline-block; */
+}
+.perfect_vdo video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    border-radius: 15px;
+}
+.perfect_title{
+    color: #131318;
+
+font-family: Mulish;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: 60px;
+}
+.perfect_description{
+    color: #5A5A5D;
+
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
+.perfect_description1{
+    color: #131318;
+
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 26px; 
 }
 
