--- a/style.css
+++ b/style.css
@@ -458,3 +458,56 @@ font-size: 32px;
 font-style: normal;
 font-weight: 800;
 }
+
+/* footer section start */
+.footer_section{
+    max-width: 1440px;
+max-height: 502px;
+background: rgba(19, 19, 24, 0.05);
+}
+.footer_title{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    /* left: 400px; */
+    top: 80px;
+    margin-left: 500px;
+}
+.footer_name1{
+    color: var(--Dark-01, #131318);
+
+font-family: Mulish;
+font-size: 32px;
+font-style: normal;
+font-weight: 800;
+}
+.footer_name12{
+    color: #FF5400;
+font-family: Mulish;
+font-size: 32px;
+font-style: normal;
+font-weight: 800;
+}
+.footer_des{
+    color: #5A5A5D;
+
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+margin:100px 300px;
+}
+.social_icons{
+    /* margin: 0px 500px; */
+    margin-left: 590px;
+    position: relative;
+    bottom: 80px;
+}
+.copyr8{
+    margin-left: 550px;
+    padding-bottom: 100px;
+    padding-top: 50px;
+}
