--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ font-family: 'Mulish', sans-serif;
 header{
     margin:30px 130px;
 }
+.menu{
+    position: relative;
+    /* top */
+    display: none;
+}
 /* nav section style start*/
 .nav_img{
     width: 48px;
@@ -111,6 +116,7 @@ position: relative;
 padding-right: 50px; */
 /* align-items: flex-start; */
 /* gap: 100px; */
+display: flex;
 border-radius: 8px;
 background: rgba(255, 255, 255, 0.30);
 width: 800px;
@@ -255,7 +261,9 @@ cursor: pointer;
     /* top: 200px; */
 }
     
-
+.choose_section{
+    margin-top: 80px;
+}
 
 #primary_titles{
     color: #131318;
@@ -277,6 +285,165 @@ font-weight: 400;
 line-height: 26px;
 margin: 20px 300px;
 
+}
+/* .destination_img{
+    border: 2px solid red;
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+} */
+.rows1{
+    display: flex;
+    gap: 20px;
+    margin-left: 130px;
+    margin-right: 130px;
+    
+}
+.rows2{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 130px;
+    margin-right: 130px;
+    gap: 20px;
+}
+.rows3{
+   display: flex;
+    /* grid-template-columns: repeat(2, 2fr); */
+    margin-left: 130px;
+    margin-right: 130px;
+    /* justify-content: center; */
+    gap: 20px;
+   
+}
+.destination_img img{
+    width: 100%;
+    margin-bottom: 0;
+}
+/* .maldivs6{
+    width: 50%;
+}
+.maldivs7{
+    width: 50%;
+} */
+#maldiv1{
+    position: relative;
+
+}
+#maldiv1p{
+    position: relative;
+    top: 150px;
+    left: 200px;
+    z-index: 10;
+   
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv{
+    position: relative;
+}
+#maldivp{
+    position: relative;
+    top: 150px;
+    left: 200px;
+    z-index: 10;
+   
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv2{
+    position: relative;
+}
+#maldiv2p{
+    position: relative;
+    top: 150px;
+    left: 120px;
+    z-index: 10;
+ 
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv3{
+    position: relative;
+}
+#maldiv3p{
+    position: relative;
+    top: 150px;
+    left: 120px;
+    z-index: 5;
+   
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 25px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv4{
+    position: relative;
+}
+#maldiv4p{
+    position: relative;
+    top: 150px;
+    left: 80px;
+    z-index: 10;
+  
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv5{
+    position: relative;
+}
+#maldiv5p{
+    position: relative;
+    top: 160px;
+    left: 150px;
+    z-index: 10;
+    
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 25px;
+font-style: normal;
+font-weight: 800;
+}
+#maldiv6{
+    position: relative;
+}
+#maldiv6p{
+    position: relative;
+    top: 150px;
+    left: 200px;
+    z-index: 10;
+    
+    color: #FFF;
+
+   
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+padding-bottom: 20px;
 }
 .benifit_title{
     color: #131318;
@@ -319,6 +486,8 @@ padding: 30px;
     display: flex;
     margin: 30px 130px;
     gap: 100px;
+    position: relative;
+    top: -900px;
 }
 .perfect_container{
     width: 50%;
@@ -363,6 +532,129 @@ font-style: normal;
 font-weight: 700;
 line-height: 26px; 
 }
+.deals_section{
+    margin-top: 50px;
+}
+.deals_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 130px;
+    margin-right: 130px;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+.deals_img {
+    display: inline-block;
+    gap: 10px; /* Adjust the gap between images if needed */
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.deals_img div {
+    flex: 1;
+}
+
+.deals_img img {
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    margin-bottom: 20px;
+}
+.deals_img2{
+    position: relative;
+    top: -300px;
+}
+.deals_img3{
+    position: relative;
+    top: -600px;
+}
+.deal_description{
+    width: 479px;
+height: 289px;
+border-radius: 16px;
+border: 2px solid #FFF;
+
+background: rgba(255, 255, 255, 0.80);
+
+backdrop-filter: blur(2.5px);
+position: relative;
+top: -400px;
+left: 500px;
+padding: 20px;
+}
+.deals_title{
+    color: #131318;
+
+font-family: Mulish;
+font-size: 24px;
+font-style: normal;
+font-weight: 800;
+margin-bottom: 10px;
+}
+.deals_des{
+    color: #5A5A5D;
+
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+margin-bottom: 10px;
+}
+.deals_price{
+    color: #FF5400;
+
+font-family: Mulish;
+font-size: 20px;
+font-style: normal;
+font-weight: 800;
+margin-bottom: 10px;
+}
+.deals_icon{
+    display: flex;
+    margin-bottom: 20px;
+    
+}
+.deals_button{
+    width: 150px;
+height: 52px;
+border-radius: 8px;
+background: #FF5400;
+color: #FFF;
+
+text-align: center;
+font-family: Mulish;
+font-size: 20px;
+font-style: normal;
+font-weight: 800;
+border: 0;
+}
+.deal_description1{
+    width: 479px;
+height: 289px;
+border-radius: 16px;
+border: 2px solid #FFF;
+
+background: rgba(255, 255, 255, 0.80);
+
+backdrop-filter: blur(2.5px);
+position: relative;
+top: -400px;
+left: 100px;
+padding: 20px;
+}
+/* .deals_img{
+    margin-right: 130px;
+    margin-left: 130px;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    justify-content: center;
+    gap: 50px;
+}
+.deals_img img{
+    width: 100%;
+} */
 
 /* news section style */
 
@@ -371,6 +663,8 @@ line-height: 26px;
     justify-content: center;
     gap: 40px;
     margin: 50px 130px;
+    position: relative;
+    top: -850px;
 
 }
 .news_img{
@@ -464,6 +758,8 @@ font-weight: 800;
     max-width: 1440px;
 max-height: 502px;
 background: rgba(19, 19, 24, 0.05);
+position: relative;
+top: -800px;
 }
 .footer_title{
     display: flex;
@@ -510,4 +806,104 @@ margin:100px 300px;
     margin-left: 550px;
     padding-bottom: 100px;
     padding-top: 50px;
+}
+
+@media screen and (max-width:576px) {
+    body{
+        margin: 20px 20px;
+    }
+    header{
+        margin:10px 10px;
+        align-items: center;
+    }
+    .nav_img{
+        width: 30px;
+    height: 40px;
+    align-items: center;
+    margin-top: 40px;
+    }
+    .nav_name{
+        display: flex;
+        gap: 20px;
+        position: relative;
+        bottom: 30px;
+        
+    }
+    .nav_bar{
+        display: none;
+        /* background: url('Images/menu.png'); */
+
+    }
+    .menu{
+        
+        
+        display: inline-block;
+        top: -100px;
+        left: 400px;
+        cursor: pointer;
+    }
+    .banner .banner_img{
+        height: 500px;
+    }
+    .banner_title{
+        top: -100px;
+        right: 50px;
+        margin: 0;
+        padding: 0;
+        font-size: 32px;
+        display: inline-block;
+
+    }
+    .banner_description{
+        display: inline-block;
+        top: -80px;
+        right: 90px;
+        font-size: 15px;
+        text-align: center;
+    }
+    .banner_btn{
+    
+        display:block;
+        flex-direction: column;
+        width: 300px;
+        
+        top: -70px;
+        padding-right: 10px;
+        margin-left: 10px;
+        gap: 10px;
+      
+    }
+    .tour_section{
+        flex-direction: column;
+        margin: 20px;
+        padding: 0;
+        margin-top: 0;
+       
+        padding-top: 50px;
+        /* display: inline-block;
+        object-fit: cover; */
+        position: relative;
+        top: -400px;
+        
+    }
+    .tour_container{
+        width: 100%;
+        font-size: medium;
+
+    }
+    .destination_sections{
+        flex-direction: column;
+    }
+    .primary_descriptions{
+        padding: 0;
+        margin: 0;
+        position: relative;
+        right: 200px;
+    }
+    .destination_img{
+        grid-template-columns: repeat(1,1fr);
+        flex-direction: column;
+    }
+
+    
 }
