--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ padding: 30px;
     margin: 30px 130px;
     gap: 100px;
     position: relative;
-    top: -900px;
+    top: -300px;
 }
 .perfect_container{
     width: 50%;
@@ -541,14 +541,15 @@ line-height: 26px;
     align-items: center;
     margin-left: 130px;
     margin-right: 130px;
-    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-x: hidden; 
 }
 
 .deals_img {
     display: inline-block;
-    gap: 10px; /* Adjust the gap between images if needed */
+    gap: 10px; 
     margin-bottom: 20px;
     margin-top: 30px;
+    position: relative;
 }
 
 .deals_img div {
@@ -557,16 +558,16 @@ line-height: 26px;
 
 .deals_img img {
     width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    height: auto; 
     margin-bottom: 20px;
 }
 .deals_img2{
     position: relative;
-    top: -300px;
+    top: 0px;
 }
 .deals_img3{
     position: relative;
-    top: -600px;
+    top: -330px;
 }
 .deal_description{
     width: 479px;
@@ -577,8 +578,22 @@ border: 2px solid #FFF;
 background: rgba(255, 255, 255, 0.80);
 
 backdrop-filter: blur(2.5px);
-position: relative;
-top: -400px;
+position: absolute;
+top: 80px;
+left: 480px;
+padding: 20px;
+}
+.deal_description2{
+    width: 479px;
+height: 289px;
+border-radius: 16px;
+border: 2px solid #FFF;
+
+background: rgba(255, 255, 255, 0.80);
+
+backdrop-filter: blur(2.5px);
+position: absolute;
+top: 80px;
 left: 480px;
 padding: 20px;
 }
@@ -664,7 +679,7 @@ padding: 20px;
     gap: 40px;
     margin: 50px 130px;
     position: relative;
-    top: -850px;
+    top: -200px;
 
 }
 .news_img{
@@ -752,14 +767,87 @@ font-size: 32px;
 font-style: normal;
 font-weight: 800;
 }
+.blog_section{
+  
+   margin-left: 130px;
+    margin-right: 130px;
+    position: relative;
+    bottom: 100px;
+    
+}
+.blog1{
+    height: 300px;
+    width: 250px;
+    background-color: #83A2FF;
+    position: absolute;
+    bottom: 450px;
+    left: 200px;
+    z-index: 10;
+    color: white;
+border-radius: 30px;
+padding: 30px 20px;
+box-shadow:5px 10px rgb(54, 85, 85);
+}
+.blog1_title{
+    font-size: 24px;
+font-style: normal;
+font-weight: 800;
+margin-bottom: 10px;
+}
+.blog2{
+    height: 300px;
+    width: 250px;
+    background-color: #332941;
+    position: absolute;
+    bottom: 450px;
+    left: 600px;
+    z-index: 10;
+    color: white;
+border-radius: 30px;
+padding: 30px 20px;
+box-shadow:5px 10px #A87C7C;
+}
+.blog2_title{
+    font-size: 24px;
+font-style: normal;
+font-weight: 800;
+margin-bottom: 10px;
+}
+.blog3{
+    height: 200px;
+    width: 700px;
+    background-color: #186F65;
+    position: absolute;
+    bottom: 100px;
+    left: 150px;
+    z-index: 10;
+    color: white;
+border-radius: 30px;
+padding: 20px 20px;
+box-shadow:5px 10px #864AF9;
+}
+.blog3_title{
+    font-size: 24px;
+font-style: normal;
+font-weight: 800;
+margin-bottom: 20px;
+margin-top: 10px;
+}
+.blog_section img {
+    width: 100%;
+    height: 900px;
+    border-radius: 20px;
+    display: block;
+margin-top: 50px;
+}
 
 /* footer section start */
 .footer_section{
     max-width: 1440px;
 max-height: 502px;
 background: rgba(19, 19, 24, 0.05);
-position: relative;
-top: -800px;
+/* position: relative;
+top: -100px; */
 }
 .footer_title{
     display: flex;
@@ -880,8 +968,7 @@ margin:100px 300px;
         margin-top: 0;
        
         padding-top: 50px;
-        /* display: inline-block;
-        object-fit: cover; */
+       
         position: relative;
         top: -400px;
         
