--- a/style.css
+++ b/style.css
@@ -1026,7 +1026,24 @@ margin:100px 300px;
     #benifit2{
         position: relative;
         width: 100%;
-        display: inline-block;
+        display: none;
+        overflow: hidden;
 
+
+    }
+    .deals_section{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .footer_section{
+        width: 100%;
+        display: inline-block;
+    }
+    .perfect_section{
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+        margin: 0;
     }
 }
